kubernetes/apps/ntp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntp
  labels:
    pod-security.kubernetes.io/enforce: restricted
